--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "apollo-datasource-rest": "latest",
     "apollo-server": "2.1.0",
+    "apollo-server-express": "^2.4.8",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
+    "express": "^4.16.4",
     "graphql": "14.0.2",
     "jsonwebtoken": "8.5.1"
   },
