--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "react": "16.8.3",
     "react-apollo": "2.5.3",
     "react-dom": "16.8.3",
+    "react-icons": "^3.6.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "typescript": "3.3.3"
